--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Artem163397/my_crud",
+  "name": "artem163397/my_crud",
   "description": "AdminLTE - admin control panel and dashboard that's based on Bootstrap 3",
   "homepage": "http://almsaeedstudio.com/",
   "keywords": [
